Bug 257722 - No visual feedback when clicking on scrollbarbutton in autocomplete popups (no depressed state), r=neil, SeaMonkey-only
UltraBlame original commit: 7a40a156d685626a5c358cc658db90443ab78776

--- a/xpfe/components/autocomplete/resources/content/autocomplete.css
+++ b/xpfe/components/autocomplete/resources/content/autocomplete.css
@@ -13,6 +13,10 @@
   visibility: hidden;
 }
 
+.autocomplete-tree {
+  -moz-user-focus: ignore;
+}
+
 
 
 
